--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="hero">
-    <h2>{{hero.name | uppercase}}'s Details</h2>
+
+    <h2>{{hero.name | uppercase}} Details</h2>
     <div><span>id: </span>{{hero.id}}</div>
-    <!-- <div><span>name: </span>{{selectedHero.name}}</div> -->
     <div>
-        <label for="name">Hero Name: </label>
-        <input id="name" [(ngModel)]="hero.name" placeholder="name">
+        <label for="hero-name">Hero name: </label>
+        <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
     </div>
+
 </div>
